classDiagram
  class Permission {
    employee: ObjectId [Required]
    boomerangHR.name: String
    boomerangHR.description: String
    boomerangHR.access: Boolean
    boomerangHR.leaveManagement.name: String
    boomerangHR.leaveManagement.description: String
    boomerangHR.leaveManagement.access: Boolean
    boomerangHR.leaveManagement.viewLeaveRequests.name: String
    boomerangHR.leaveManagement.viewLeaveRequests.description: String
    boomerangHR.leaveManagement.viewLeaveRequests.enabled: Boolean
    boomerangHR.leaveManagement.approveLeaveRequests.name: String
    boomerangHR.leaveManagement.approveLeaveRequests.description: String
    boomerangHR.leaveManagement.approveLeaveRequests.enabled: Boolean
    boomerangHR.leaveManagement.manageLeaveTypes.name: String
    boomerangHR.leaveManagement.manageLeaveTypes.description: String
    boomerangHR.leaveManagement.manageLeaveTypes.enabled: Boolean
    boomerangHR.leaveManagement.viewLeaveBalances.name: String
    boomerangHR.leaveManagement.viewLeaveBalances.description: String
    boomerangHR.leaveManagement.viewLeaveBalances.enabled: Boolean
    boomerangHR.leaveManagement.manageLeavePolicies.name: String
    boomerangHR.leaveManagement.manageLeavePolicies.description: String
    boomerangHR.leaveManagement.manageLeavePolicies.enabled: Boolean
    boomerangHR.payroll.name: String
    boomerangHR.payroll.description: String
    boomerangHR.payroll.access: Boolean
    boomerangHR.payroll.viewPayroll.name: String
    boomerangHR.payroll.viewPayroll.description: String
    boomerangHR.payroll.viewPayroll.enabled: Boolean
    boomerangHR.payroll.createPayroll.name: String
    boomerangHR.payroll.createPayroll.description: String
    boomerangHR.payroll.createPayroll.enabled: Boolean
    boomerangHR.payroll.editPayroll.name: String
    boomerangHR.payroll.editPayroll.description: String
    boomerangHR.payroll.editPayroll.enabled: Boolean
    boomerangHR.payroll.manageBenefits.name: String
    boomerangHR.payroll.manageBenefits.description: String
    boomerangHR.payroll.manageBenefits.enabled: Boolean
    boomerangHR.payroll.approvePayroll.name: String
    boomerangHR.payroll.approvePayroll.description: String
    boomerangHR.payroll.approvePayroll.enabled: Boolean
    boomerangHR.payroll.managePaySchedules.name: String
    boomerangHR.payroll.managePaySchedules.description: String
    boomerangHR.payroll.managePaySchedules.enabled: Boolean
    boomerangHR.payroll.viewPayrollReports.name: String
    boomerangHR.payroll.viewPayrollReports.description: String
    boomerangHR.payroll.viewPayrollReports.enabled: Boolean
    boomerangHR.employeeManagement.name: String
    boomerangHR.employeeManagement.description: String
    boomerangHR.employeeManagement.access: Boolean
    boomerangHR.employeeManagement.manageProfiles.name: String
    boomerangHR.employeeManagement.manageProfiles.description: String
    boomerangHR.employeeManagement.manageProfiles.enabled: Boolean
    boomerangHR.employeeManagement.updateStatus.name: String
    boomerangHR.employeeManagement.updateStatus.description: String
    boomerangHR.employeeManagement.updateStatus.enabled: Boolean
    boomerangHR.employeeManagement.manageOnboarding.name: String
    boomerangHR.employeeManagement.manageOnboarding.description: String
    boomerangHR.employeeManagement.manageOnboarding.enabled: Boolean
    boomerangHR.employeeManagement.manageExitProcess.name: String
    boomerangHR.employeeManagement.manageExitProcess.description: String
    boomerangHR.employeeManagement.manageExitProcess.enabled: Boolean
    boomerangHR.employeeManagement.viewEmployeeDocuments.name: String
    boomerangHR.employeeManagement.viewEmployeeDocuments.description: String
    boomerangHR.employeeManagement.viewEmployeeDocuments.enabled: Boolean
    boomerangHR.employeeManagement.manageQualifications.name: String
    boomerangHR.employeeManagement.manageQualifications.description: String
    boomerangHR.employeeManagement.manageQualifications.enabled: Boolean
    boomerangHR.attendanceManagement.name: String
    boomerangHR.attendanceManagement.description: String
    boomerangHR.attendanceManagement.access: Boolean
    boomerangHR.attendanceManagement.viewAttendance.name: String
    boomerangHR.attendanceManagement.viewAttendance.description: String
    boomerangHR.attendanceManagement.viewAttendance.enabled: Boolean
    boomerangHR.attendanceManagement.manageAttendance.name: String
    boomerangHR.attendanceManagement.manageAttendance.description: String
    boomerangHR.attendanceManagement.manageAttendance.enabled: Boolean
    boomerangHR.attendanceManagement.approveTimeSheets.name: String
    boomerangHR.attendanceManagement.approveTimeSheets.description: String
    boomerangHR.attendanceManagement.approveTimeSheets.enabled: Boolean
    boomerangHR.attendanceManagement.manageWorkSchedules.name: String
    boomerangHR.attendanceManagement.manageWorkSchedules.description: String
    boomerangHR.attendanceManagement.manageWorkSchedules.enabled: Boolean
    boomerangHR.performanceManagement.name: String
    boomerangHR.performanceManagement.description: String
    boomerangHR.performanceManagement.access: Boolean
    boomerangHR.performanceManagement.viewPerformance.name: String
    boomerangHR.performanceManagement.viewPerformance.description: String
    boomerangHR.performanceManagement.viewPerformance.enabled: Boolean
    boomerangHR.performanceManagement.conductReviews.name: String
    boomerangHR.performanceManagement.conductReviews.description: String
    boomerangHR.performanceManagement.conductReviews.enabled: Boolean
    boomerangHR.performanceManagement.manageGoals.name: String
    boomerangHR.performanceManagement.manageGoals.description: String
    boomerangHR.performanceManagement.manageGoals.enabled: Boolean
    boomerangHR.performanceManagement.approveReviews.name: String
    boomerangHR.performanceManagement.approveReviews.description: String
    boomerangHR.performanceManagement.approveReviews.enabled: Boolean
    boomerangHR.performanceManagement.manageCompetencies.name: String
    boomerangHR.performanceManagement.manageCompetencies.description: String
    boomerangHR.performanceManagement.manageCompetencies.enabled: Boolean
    boomerangHR.reporting.name: String
    boomerangHR.reporting.description: String
    boomerangHR.reporting.access: Boolean
    boomerangHR.reporting.viewReports.name: String
    boomerangHR.reporting.viewReports.description: String
    boomerangHR.reporting.viewReports.enabled: Boolean
    boomerangHR.reporting.generateReports.name: String
    boomerangHR.reporting.generateReports.description: String
    boomerangHR.reporting.generateReports.enabled: Boolean
    boomerangHR.reporting.exportData.name: String
    boomerangHR.reporting.exportData.description: String
    boomerangHR.reporting.exportData.enabled: Boolean
    boomerangHR.reporting.manageDashboards.name: String
    boomerangHR.reporting.manageDashboards.description: String
    boomerangHR.reporting.manageDashboards.enabled: Boolean
    amebo.name: String
    amebo.description: String
    amebo.access: Boolean
    amebo.messaging.name: String
    amebo.messaging.description: String
    amebo.messaging.access: Boolean
    amebo.messaging.sendMessages.name: String
    amebo.messaging.sendMessages.description: String
    amebo.messaging.sendMessages.enabled: Boolean
    amebo.messaging.manageChannels.name: String
    amebo.messaging.manageChannels.description: String
    amebo.messaging.manageChannels.enabled: Boolean
    amebo.notifications.name: String
    amebo.notifications.description: String
    amebo.notifications.access: Boolean
    amebo.notifications.createAlerts.name: String
    amebo.notifications.createAlerts.description: String
    amebo.notifications.createAlerts.enabled: Boolean
    amebo.notifications.viewAlerts.name: String
    amebo.notifications.viewAlerts.description: String
    amebo.notifications.viewAlerts.enabled: Boolean
    amebo.projectManagement.name: String
    amebo.projectManagement.description: String
    amebo.projectManagement.access: Boolean
    amebo.projectManagement.createProjects.name: String
    amebo.projectManagement.createProjects.description: String
    amebo.projectManagement.createProjects.enabled: Boolean
    amebo.projectManagement.editProjects.name: String
    amebo.projectManagement.editProjects.description: String
    amebo.projectManagement.editProjects.enabled: Boolean
    amebo.projectManagement.assignMembers.name: String
    amebo.projectManagement.assignMembers.description: String
    amebo.projectManagement.assignMembers.enabled: Boolean
    amebo.taskManagement.name: String
    amebo.taskManagement.description: String
    amebo.taskManagement.access: Boolean
    amebo.taskManagement.createTasks.name: String
    amebo.taskManagement.createTasks.description: String
    amebo.taskManagement.createTasks.enabled: Boolean
    amebo.taskManagement.assignTasks.name: String
    amebo.taskManagement.assignTasks.description: String
    amebo.taskManagement.assignTasks.enabled: Boolean
    amebo.taskManagement.updateTaskStatus.name: String
    amebo.taskManagement.updateTaskStatus.description: String
    amebo.taskManagement.updateTaskStatus.enabled: Boolean
    amebo.reporting.name: String
    amebo.reporting.description: String
    amebo.reporting.access: Boolean
    amebo.reporting.viewReports.name: String
    amebo.reporting.viewReports.description: String
    amebo.reporting.viewReports.enabled: Boolean
    amebo.reporting.generateReports.name: String
    amebo.reporting.generateReports.description: String
    amebo.reporting.generateReports.enabled: Boolean
    amebo.reporting.exportData.name: String
    amebo.reporting.exportData.description: String
    amebo.reporting.exportData.enabled: Boolean
    amebo.reporting.manageDashboards.name: String
    amebo.reporting.manageDashboards.description: String
    amebo.reporting.manageDashboards.enabled: Boolean
    gwapp.name: String
    gwapp.description: String
    gwapp.access: Boolean
    gwapp.requisition.name: String
    gwapp.requisition.description: String
    gwapp.requisition.access: Boolean
    gwapp.requisition.raiseRequisitions.name: String
    gwapp.requisition.raiseRequisitions.description: String
    gwapp.requisition.raiseRequisitions.enabled: Boolean
    gwapp.requisition.reviewRequisitions.name: String
    gwapp.requisition.reviewRequisitions.description: String
    gwapp.requisition.reviewRequisitions.enabled: Boolean
    gwapp.requisition.approveRequisitions.name: String
    gwapp.requisition.approveRequisitions.description: String
    gwapp.requisition.approveRequisitions.enabled: Boolean
    gwapp.procurement.name: String
    gwapp.procurement.description: String
    gwapp.procurement.access: Boolean
    gwapp.procurement.addVendors.name: String
    gwapp.procurement.addVendors.description: String
    gwapp.procurement.addVendors.enabled: Boolean
    gwapp.procurement.viewVendorDetails.name: String
    gwapp.procurement.viewVendorDetails.description: String
    gwapp.procurement.viewVendorDetails.enabled: Boolean
    gwapp.procurement.editVendorDetails.name: String
    gwapp.procurement.editVendorDetails.description: String
    gwapp.procurement.editVendorDetails.enabled: Boolean
    gwapp.procurement.createPurchaseOrders.name: String
    gwapp.procurement.createPurchaseOrders.description: String
    gwapp.procurement.createPurchaseOrders.enabled: Boolean
    gwapp.procurement.viewPurchaseOrders.name: String
    gwapp.procurement.viewPurchaseOrders.description: String
    gwapp.procurement.viewPurchaseOrders.enabled: Boolean
    gwapp.procurement.editPurchaseOrders.name: String
    gwapp.procurement.editPurchaseOrders.description: String
    gwapp.procurement.editPurchaseOrders.enabled: Boolean
    gwapp.procurement.approvePurchaseOrders.name: String
    gwapp.procurement.approvePurchaseOrders.description: String
    gwapp.procurement.approvePurchaseOrders.enabled: Boolean
    gwapp.reporting.name: String
    gwapp.reporting.description: String
    gwapp.reporting.access: Boolean
    gwapp.reporting.viewReports.name: String
    gwapp.reporting.viewReports.description: String
    gwapp.reporting.viewReports.enabled: Boolean
    gwapp.reporting.generateReports.name: String
    gwapp.reporting.generateReports.description: String
    gwapp.reporting.generateReports.enabled: Boolean
    gwapp.reporting.exportData.name: String
    gwapp.reporting.exportData.description: String
    gwapp.reporting.exportData.enabled: Boolean
    gwapp.reporting.manageDashboards.name: String
    gwapp.reporting.manageDashboards.description: String
    gwapp.reporting.manageDashboards.enabled: Boolean
    systemAdmin.name: String
    systemAdmin.description: String
    systemAdmin.access: Boolean
    systemAdmin.userManagement.name: String
    systemAdmin.userManagement.description: String
    systemAdmin.userManagement.access: Boolean
    systemAdmin.userManagement.manageUsers.name: String
    systemAdmin.userManagement.manageUsers.description: String
    systemAdmin.userManagement.manageUsers.enabled: Boolean
    systemAdmin.userManagement.managePermissions.name: String
    systemAdmin.userManagement.managePermissions.description: String
    systemAdmin.userManagement.managePermissions.enabled: Boolean
    systemAdmin.systemSettings.name: String
    systemAdmin.systemSettings.description: String
    systemAdmin.systemSettings.access: Boolean
    systemAdmin.systemSettings.manageSettings.name: String
    systemAdmin.systemSettings.manageSettings.description: String
    systemAdmin.systemSettings.manageSettings.enabled: Boolean
    systemAdmin.systemSettings.viewSystem.name: String
    systemAdmin.systemSettings.viewSystem.description: String
    systemAdmin.systemSettings.viewSystem.enabled: Boolean
    systemAdmin.manageDepartments.name: String
    systemAdmin.manageDepartments.description: String
    systemAdmin.manageDepartments.access: Boolean
    systemAdmin.manageDepartments.createDepartment.name: String
    systemAdmin.manageDepartments.createDepartment.description: String
    systemAdmin.manageDepartments.createDepartment.enabled: Boolean
    systemAdmin.manageDepartments.editDepartment.name: String
    systemAdmin.manageDepartments.editDepartment.description: String
    systemAdmin.manageDepartments.editDepartment.enabled: Boolean
    systemAdmin.manageDepartments.deleteDepartment.name: String
    systemAdmin.manageDepartments.deleteDepartment.description: String
    systemAdmin.manageDepartments.deleteDepartment.enabled: Boolean
    systemAdmin.manageDepartments.addMembersToDepartment.name: String
    systemAdmin.manageDepartments.addMembersToDepartment.description: String
    systemAdmin.manageDepartments.addMembersToDepartment.enabled: Boolean
    systemAdmin.manageDepartments.removeMembersFromDepartment.name: String
    systemAdmin.manageDepartments.removeMembersFromDepartment.description: String
    systemAdmin.manageDepartments.removeMembersFromDepartment.enabled: Boolean
    systemAdmin.manageDepartments.viewDepartmentMembers.name: String
    systemAdmin.manageDepartments.viewDepartmentMembers.description: String
    systemAdmin.manageDepartments.viewDepartmentMembers.enabled: Boolean
    organizationId: ObjectId [Required]
    createdAt: Date
    updatedAt: Date
  }

  Permission --> Employee
  Permission --> Organization
